# Server-User-Guide

./: .gitignore  README.md  deploy.sh  main.py  mkdocs.yml  pyproject.toml  requirements.txt  translate.py  服务器使用手册.md
.github/workflows/: deploy.yml
docs/: data.en.md  data.md  index.en.md  index.md  team.en.md  team.md
docs/01-connect/: android.en.md  android.md  ios.en.md  ios.md  jump-server.en.md  jump-server.md  mac.en.md  mac.md  win.en.md  win.md
docs/02-conda/: install.en.md  install.md  use.en.md  use.md
docs/02-uv/: install.en.md  install.md  use.en.md  use.md
docs/03-jupyter/: install.en.md  install.md  use.en.md  use.md  vscode.en.md  vscode.md  web.en.md  web.md
docs/04-stata/: command-line.en.md  command-line.md  gui.en.md  gui.md  jupyter.en.md  jupyter.md  pystata.ipynb  stata_kernel.ipynb
docs/05-sas/: command-line.en.md  command-line.md  gui.en.md  gui.md  jmp.en.md  jmp.md  jupyter.en.md  jupyter.md
docs/06-python/: env.en.md  env.md  install.en.md  install.md  matplotlib.en.md  matplotlib.md  pandas.en.md  pandas.md  parallel.en.md  parallel.md
docs/08-linux/: basic.en.md  basic.md  firewall.en.md  firewall.md  gui.en.md  gui.md  jump-proxy.en.md  jump-proxy.md  pubkey.en.md  pubkey.md  reverse-ssh.en.md  reverse-ssh.md  rsync.en.md  rsync.md  screen.en.md  screen.md  smem.en.md  smem.md  system-manage.en.md  system-manage.md  vim.en.md  vim.md
docs/09-matlab/: official.md
docs/10-sql/: postgre.en.md  postgre.md  sqlite.en.md  sqlite.md
docs/11-practice/: file-index.en.md  file-index.md  (+2 more)
site/: 404.html  index.html  sitemap.xml
(+43 files in other folders)
