[project]
name = "server-user-guide"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "zensical>=0.0.24",
    "mkdocs-git-revision-date-localized-plugin>=1.5.1",
    "mkdocs-static-i18n>=1.3.1",
    "pymdown-extensions>=10.20.1",
]
