[project]
name = "server-user-guide"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mkdocs>=1.6.1,<2.0",
    "mkdocs-git-revision-date-localized-plugin>=1.5.1",
    "mkdocs-static-i18n>=1.3.1",
    "pymdown-extensions>=10.20.1",
    "requests>=2.31.0",
    "mkdocs-material>=9.7.4",
    "mkdocs-minify-plugin>=0.8.0",
]
